bug 90664: Make sure we perform RS handling when we can, in cases where tags that cannot nest and normally would be closed out cannot, due to block tags between them. r=jst sr=brendan